--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@
     color: rgb(255, 48, 91);
     width: 50%;
     float: left;
+    cursor: pointer;
 }
 .nav{
 
@@ -53,12 +54,16 @@
     width: 50%;
 }
 .nav a{
+    transition: all 0.3s ease;
     padding: 0 10 0 10;
     font-weight: 300;
     line-height: 20px;
     text-decoration: none;
     list-style: none;
     color: rgb(255, 232, 237);
+}
+.nav a:hover{
+    color: rgb(255, 48, 91);
 }
 .nav i{
     visibility: hidden;
@@ -182,6 +187,7 @@
 }
 
 .second-content-about button{
+    transition: all 0.3s ease;
     background-color: rgb(255, 48, 91) ;
     color: white;
     padding: 8 25;
@@ -677,7 +683,10 @@
     height: 100px;
     margin-bottom: 30px;
     padding: 10px;
+    border: 1px solid rgb(119, 119, 119);
+    border-radius: 5px;
 }
+
 .contact button{
     background-color: rgb(255, 48, 91) ;
     color: white;
@@ -690,6 +699,7 @@
     border-radius: 5px;
     position: absolute;
     left: 274;
+    transition: all 0.3s ease;
 }
 
 .footer{
@@ -710,4 +720,10 @@
 }
 .footer p span{
     color: rgb(255, 48, 91);
+}
+
+button:hover{
+    background-color: white;
+    color: rgb(255, 48, 91);
+    cursor: pointer;
 }
